Modernize validation runtime and native Jing integration